tests/base/invalid/Byte_Invalid_1.whiley
void System::main([string] args):
    b = 01b
    i = b * 2
    out.println(str(i))
